General cleanup and fixing whitespace

--- a/front-end/src/organisms/WorkspaceSettings.css
+++ b/front-end/src/organisms/WorkspaceSettings.css
@@ -35,7 +35,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
 }
 
 .WorkspaceSettings-exit{
@@ -118,7 +118,7 @@
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: end;
+    justify-content: flex-end;
     height: 95px;
 }
 
